ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
  namespace: devsunamespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsuservice
                port:
                  number: 8080
